@@ -1,6 +1,7 @@
 Contract Configurator 1.0.1
 - SpawnKerbal and SpawnPassenger now support setting the Kerbal type and gender.
 - Add Gender() method for expressions on Kerbals.
+- Added autoAccept attribute to CONTRACT_TYPE (behaves like the stock World-Firsts record contracts).
 
 Contract Configurator 1.0.0
 - Various fixes related to KSP 1.0.
